Fix copy buttons showing up behind the heading

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -195,7 +195,7 @@ html {
   margin-right: 0.3rem;
   top: 0;
   right: 0;
-  z-index: 10;
+  z-index: 2;
   color: white;
   cursor: pointer;
   font-size: 0.75rem;
